<resources>
    <string name="app_name">Assignment2</string>

    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="rpassword">Re-password</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="dash">Welcome ADMIN</string>
    <string name="desc">Welcome To The Student MULTI APP. Here you can use various types of tools and application to help with your student life.</string>
    <string name="dice">CLICK The dice and roll it!! Maybe you get lucky and get 6 </string>
    <string name="diceinf">Click the dice and get your score </string>
    <string name="submit">Submit</string>
    <string name="save">SAVE</string>
    <string name="address">Address</string>
    <string name="phone">Phone No</string>
    <string name="view">VIEW</string>
    <string name="exit">Exit</string>
    <string name="fname">Full Name</string>
    <string name="title">THE SHOPPY APP</string>
    <string name="update">Update</string>

    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="postcode">Post Code</string>
    <string name="delete">DELETE</string>
    <string name="back">BACK</string>
    <string name="notepad">MY NOTEPAD</string>
    <string name="copyright">Copyright ©2023 The HSETIR</string>

    <string name="shop">Shop</string>
    <string name="cart">Cart</string>
    <string name="profile">Profile</string>
    <string name="notification">Notification</string>
    <string name="favitem">Favourite Items</string>
    <string name="OrderHis">Order History</string>
    <string name="about">About Us</string>
    <string name="faq">FAQ Help</string>
    <string name="extras">Extras</string>
    <string name="Myshoppy">MY Shoppy</string>
    <string name="welcome">Welcome!!</string>
    <string name="defuser">MY SHOPIFY APP</string>
    <string name="defemail">Hello! new user? Login and start shopping.</string>
    <string name="category">Category</string>
    <string name="order_list">Order List</string>
    <string name="my_category">Category List</string>
    <string name="product_list">Product List</string>
    <string name="add">Add</string>
    <string name="close">close</string>
    <string name="edit">Edit</string>
    <string name="edit_delete_category">Edit/Delete Category</string>
    <string name="retail_price">Retail Price</string>
    <string name="product_name">Product Name</string>
    <string name="product_description">Product Description</string>
    <string name="market_price">Market Price</string>
    <string name="list_price">List Price</string>
    <string name="product_category">Product Category</string>
    <string name="type_the_product_description">Type the product description</string>
    <string name="add_product">Add Product</string>
    <string name="edit_product">Edit Product</string>
    <string name="product_price">Product Price</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_category">Add Category</string>
    <string name="enter_category_name">Enter Category Name</string>
    <string name="liked_item_list">Liked Item List</string>
    <string name="order_price">Order Price</string>
    <string name="checkout">Checkout</string>
    <string name="my_cart">My Cart</string>
    <string name="vats">VAT%</string>
    <string name="order_details">Order Details</string>
    <string name="total_items">Total Items</string>
    <string name="total_price">Total Price</string>
    <string name="order_received">Order Received</string>
    <string name="order_processed">Order Processed</string>
    <string name="order_delivered">Order Delivered</string>
    <string name="order_number">ORDER Number</string>
    <string name="user_email">User Email</string>
    <string name="a_bc_deff">A@bc.deff</string>
    <string name="order_date">Order Date</string>
    <string name="zero">0.00</string>


</resources>