<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp"
    android:background="#FFFFFF"
    android:orientation="horizontal"
    android:padding="16dp"
    app:layout_goneMarginBottom="10dp">

    <ImageView
        android:id="@+id/imageview_product"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@drawable/product_placeholder" />

    <LinearLayout
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textview_productname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/product_name"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textview_productprice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/product_price"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textview_productdescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:text="@string/product_description"
            android:textSize="14sp" />
    </LinearLayout>

    <Button
        android:id="@+id/button_viewproduct"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#6200EA"
        android:text="@string/edit"
        android:textColor="@color/white"
        android:textSize="12sp" />


</LinearLayout>
