<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#6200ED"
    tools:context=".Login">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/scrollView3"
        android:layout_width="384dp"
        android:layout_height="798dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


            <ImageView
                android:id="@+id/imageLogo"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginTop="60dp"
                android:contentDescription="logo"
                android:scaleType="centerCrop"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/logobk"
                tools:srcCompat="@drawable/logobk" />

            <EditText
                android:id="@+id/usernamex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:ems="10"
                android:hint="@string/username"
                android:inputType="textPersonName"
                android:singleLine="false"
                android:textColor="#FEFEFE"
                android:textColorHint="#FEFEFE"
                android:visibility="visible"
                app:backgroundTint="#ffffff"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />

            <EditText
                android:id="@+id/passwordx"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"

                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="#FEFEFE"
                android:textColorHint="#FEFEFE"
                android:visibility="visible"
                app:backgroundTint="#ffffff"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/usernamex" />

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="130dp"
                android:layout_height="50dp"
                android:layout_marginTop="50dp"
                android:background="@drawable/ic_button_rounded"
                android:text="@string/login"
                android:textColor="#6200EC"
                android:textSize="16sp"
                android:textStyle="bold"
                app:backgroundTint="#FEFEFE"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/passwordx"
                app:strokeColor="#FEFEFE" />

            <Button
                android:id="@+id/btnReg"
                android:layout_width="130dp"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/ic_button_rounded"
                android:text="@string/register"
                android:textSize="14sp"
                android:textStyle="bold"
                app:backgroundTint="#E40A0A"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:text="@string/title"
                android:textAlignment="center"
                android:textColor="#F3F5E1"
                android:textSize="34sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageLogo" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    <TextView
        android:id="@+id/textViews"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:background="#6200ED"
        android:gravity="center"
        android:text="@string/copyright"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>